# timsim-eval

./: README.md  pyproject.toml
src/timsim_eval/: __init__.py  comparison.py  metrics.py  parsing.py  peak_distribution.py  runner.py  v2_eval.py  v2_thermo_eval.py
